Fix #260 fixing issues on mobile menu

--- a/style/adaptable.css
+++ b/style/adaptable.css
@@ -959,6 +959,22 @@ input[type="radio"], input[type="checkbox"] {
         border-radius: 0;
         padding-left: 0px !important;
     }
+
+
+
+    #page-navbar.span12 {
+        background: transparent;
+    }
+
+    a.dropdown-toggle {
+        height: 40px; !important
+    }
+
+    .userhead{
+        height:20px;
+    }
+}
+
 }
 
 @media (max-width: 520px) {
